--- a/config/reachy_grasp.yaml
+++ b/config/reachy_grasp.yaml
@@ -1,7 +1,7 @@
 
 MIN_APPROACH_ERROR : 0.01
 MIN_GRIP_ERROR : 0.005
-MAX_GRIP_ERROR : 0.2
+MAX_GRIP_LOAD : 0.2
 APPROACH_X_OFFSET: 0.07
 APPROACH_Y_OFFSET: 0.0
 APPROACH_Z_OFFSET: 0.145
