--- a/config/tags.yaml
+++ b/config/tags.yaml
@@ -19,12 +19,14 @@
 #   ]
 standalone_tags:
   [
-  #{id: 0, size: 0.0755, name: "tag_0"},
-  #{id: 1, size: 0.0755, name: "tag_1"},
-  {id: 2, size: 0.0755, name: "tag_2"}
-  #{id: 3, size: 0.0755, name: "tag_3"},
-  #{id: 4, size: 0.0755, name: "tag_4"},
-  #{id: 5, size: 0.0755, name: "tag_5"}
+    {id: 0, size: 0.51, x: 0.0, y: 0.0, z: -0.2, qw: 0.0, qx: -0.7071068, qy: 0.7071068, qz: 0.0},
+    {id: 1, size: 0.51, x: 0.0, y: 0.2, z: 0.0, qw: -0.5, qx: 0.5, qy: -0.5, qz: -0.5},
+    {id: 2, size: 0.51, x: 0.0, y: 0.0, z: 0.2, qw: 0.7071068, qx: 0.0, qy: 0.0, qz: 0.7071068},
+    # {id: 2, size: 0.51, name: "tag_2", x: 0.0, y: 0.0, z: 0.2, qw: 0.7071068, qx: 0.0, qy: 0.0, qz: 0.7071068}
+    {id: 3, size: 0.51, x: 0.0, y: -0.2, z: 0.0, qw: 0.0, qx: 0.0, qy: -0.7071068, qz: 0.7071068},
+    {id: 4, size: 0.51, x: 0.2, y: 0.0, z: 0.0, qw: 0.7071068, qx: 0.0, qy: 0.7071068, qz: 0.0},
+    {id: 5, size: 0.51, x: -0.2, y: 0.0, z: 0.0, qw: 0.0, qx: -0.7071068, qy: 0.0, qz: 0.7071068}
+
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -48,18 +50,9 @@ standalone_tags:
 #     ...
 #   ]
 ######### TODO: correct orientations of markers on each face... thats the most likely cause for jumpyness in output
-# tag_bundles:
-#   [
-# {
-# name: 'APRIL_CUBE',
-# layout:
-# [
-# {id: 0, size: 0.31111111, x: 0.0, y: 0.0, z: -0.2, qw: 0.0, qx: -0.7071068, qy: 0.7071068, qz: 0.0},
-# {id: 1, size: 0.31111111, x: 0.0, y: 0.2, z: 0.0, qw: -0.5, qx: 0.5, qy: -0.5, qz: -0.5},
-# {id: 2, size: 0.31111111, x: 0.0, y: 0.0, z: 0.2, qw: 0.7071068, qx: 0.0, qy: 0.0, qz: 0.7071068},
-# {id: 3, size: 0.31111111, x: 0.0, y: -0.2, z: 0.0, qw: 0.0, qx: 0.0, qy: -0.7071068, qz: 0.7071068},
-# {id: 4, size: 0.31111111, x: 0.2, y: 0.0, z: 0.0, qw: 0.7071068, qx: 0.0, qy: 0.7071068, qz: 0.0},
-# {id: 5, size: 0.31111111, x: -0.2, y: 0.0, z: 0.0, qw: 0.0, qx: -0.7071068, qy: 0.0, qz: 0.7071068}
-# ]
-# }
-#   ]
+tag_bundles:
+  [
+
+
+
+  ]
