--- a/config/reachy_grasp.yaml
+++ b/config/reachy_grasp.yaml
@@ -1,11 +1,20 @@
 
-MIN_APPROACH_ERROR : 0.05
+MIN_APPROACH_ERROR : 0.10
 MIN_GRIP_ERROR : 0.04
 MAX_GRIP_LOAD : 0.2
-APPROACH_X_OFFSET: -0.15
-APPROACH_Y_OFFSET: -0.02
-APPROACH_Z_OFFSET: 0.03
 
-GRASP_X_OFFSET : -0.025
-GRASP_Y_OFFSET : -0.02
+APPROACH_X_OFFSET: -0.15
+APPROACH_Y_OFFSET: -0.03
+APPROACH_Z_OFFSET: 0.06
+
+GRASP_X_OFFSET : 0.01 #-0.025
+GRASP_Y_OFFSET : -0.03
 GRASP_Z_OFFSET : 0.01
+
+RELEASE_APPROACH_X_OFFSET: 0.02
+RELEASE_APPROACH_Y_OFFSET: -0.02
+RELEASE_APPROACH_Z_OFFSET: 0.08
+
+RELEASE_X_OFFSET : 0.02
+RELEASE_Y_OFFSET : -0.02
+RELEASE_Z_OFFSET : 0.01
